--- a/app/src/style.scss
+++ b/app/src/style.scss
@@ -1,7 +1,7 @@
-.note {
-    padding-bottom: 2rem;
-    border-bottom: 1px solid #999;
-}
+// .note {
+//     padding-bottom: 2rem;
+//     border-bottom: 1px solid #999;
+// }
 
 #form-manager {
     margin-top: 2rem;
